#8: Fix hero overlap & nav item clicking issue

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -58,12 +58,12 @@
     @apply text-[18px] leading-6;
   }
 
-  @media only screen and (max-width: 768px) {
+  @media only screen and (max-width: 920px) {
     h1 {
       @apply text-[36px] leading-[48px];
     }
   }
-  
+
   iframe {
     @apply aspect-video;
   }
